# agentvectordb

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  MANIFEST.in  README.md  SECURITY.md  about.html  api-reference.html  concepts.html  coverage.xml  examples.html  faq.html  getting-started.html  guides.html  index.html  pyproject.toml  setup.py  setup.py.disabled
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
_next/static/OIjoD7WJKOhtneuYZtIJC/: _buildManifest.js
_next/static/Yeyg3S9YY-I7bD9OuDhpT/: _buildManifest.js
_next/static/chunks/: 708-03072515b788f8bc.js  708-78bdff8872185374.js  708-932a194fe97e1a8c.js  main-1ec2b6ff437f8ea1.js  webpack-ad56c581ff0cf196.js  webpack-f6e0bbe2ea6e66a4.js
_next/static/chunks/pages/: about-88b139d571c26f59.js  about-baee5916cca61565.js  examples-4b0e2764f0b7dc5c.js  examples-f8f3c0b24a3ea0cb.js  faq-b6b6a9b461e38198.js  getting-started-77a5ea2f19ca5749.js  guides-c2e018e2fe4ce94e.js  guides-d74eb387ff5dd4f2.js  index-240073b061448df6.js  index-5c458a8ec58f56ba.js
agentvector/: EMBEDDINGS_GUIDE.md  __init__.py  agent_memory.py  async_agent_memory.py  async_colection.py  async_collection.py  async_store.py  collection.py  embeddings.py  exceptions.py  schemas.py  store.py
agentvectordb/: EMBEDDINGS_GUIDE.md  __init__.py  agent_memory.py  async_agent_memory.py  async_store.py  collection.py  embeddings.py  exceptions.py  schemas.py  store.py  utils.py
docs/: _meta.json  next.config.js  package-lock.json  package.json  theme.config.jsx
docs/pages/: _meta.json  about.mdx  api-reference.mdx  concepts.mdx  examples.mdx  faq.mdx  getting-started.mdx  guides.mdx  index.mdx
examples/: async_batch_add.py  async_collection.py  async_delete.py  async_store.py  async_usage.py  basic_usage.py  cognitive_functions_usage.py  metadata_filtering.py  prune_and_count.py  quickstart.py  sync_basic_usage.py
tests/: conftest.py  test_agent_memory.py  test_async_collection.py  test_async_store.py  test_collections.py  test_store.py
